--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
+    "react-switch": "^7.0.0",
     "react-vertical-timeline-component": "^3.6.0",
     "swiper": "^11.0.2",
     "web-vitals": "^2.1.4"
